overflow issue resolved

--- a/css/header.css
+++ b/css/header.css
@@ -9,7 +9,7 @@ body{
     margin:30px 0px 0px 0px;
     display: flex;
     flex-direction: column;
-    overflow-x:hidden;
+
 }
 section{
     display: flex;
@@ -138,6 +138,9 @@ section{
         }
         
     }
+    body{
+        overflow-x: hidden;
+    }
     
 }
 
@@ -172,5 +175,9 @@ section{
             left: 200%;
         }
         
+    }
+
+    body{
+        overflow-x: hidden;
     }
 }
